# xdg-desktop-portal-cosmic

./: .gitignore  Cargo.toml  Makefile  TESTING.md  flake.nix  justfile
.github/workflows/: ci.yml
cosmic-portal-config/: Cargo.toml
cosmic-portal-config/src/: background.rs  lib.rs  screenshot.rs
data/: cosmic-portals.conf  cosmic.portal  org.freedesktop.impl.portal.desktop.cosmic.service  org.freedesktop.impl.portal.desktop.cosmic.service.in  xdg-desktop-portal-cosmic.service
data/dbus-1/: org.freedesktop.impl.portal.desktop.cosmic.service.in
debian/: changelog  control  rules
examples/: background.rs  file_chooser.rs  screencast.rs
i18n/ar/: xdg_desktop_portal_cosmic.ftl
i18n/be/: xdg_desktop_portal_cosmic.ftl
i18n/bg/: xdg_desktop_portal_cosmic.ftl
i18n/ca/: xdg_desktop_portal_cosmic.ftl
i18n/cs/: xdg_desktop_portal_cosmic.ftl
i18n/de/: xdg_desktop_portal_cosmic.ftl
i18n/el/: xdg_desktop_portal_cosmic.ftl
i18n/en/: xdg_desktop_portal_cosmic.ftl
i18n/es/: xdg_desktop_portal_cosmic.ftl
i18n/es-419/: xdg_desktop_portal_cosmic.ftl
i18n/et/: xdg_desktop_portal_cosmic.ftl
i18n/fi/: xdg_desktop_portal_cosmic.ftl
i18n/fr/: xdg_desktop_portal_cosmic.ftl
i18n/ga/: xdg_desktop_portal_cosmic.ftl
i18n/hi/: xdg_desktop_portal_cosmic.ftl
i18n/hu/: xdg_desktop_portal_cosmic.ftl
i18n/id/: xdg_desktop_portal_cosmic.ftl
i18n/is/: xdg_desktop_portal_cosmic.ftl
i18n/it/: xdg_desktop_portal_cosmic.ftl
i18n/ja/: xdg_desktop_portal_cosmic.ftl
i18n/kab/: xdg_desktop_portal_cosmic.ftl
i18n/kk/: xdg_desktop_portal_cosmic.ftl
i18n/kmr/: xdg_desktop_portal_cosmic.ftl
i18n/ko/: xdg_desktop_portal_cosmic.ftl
i18n/lt/: xdg_desktop_portal_cosmic.ftl
i18n/nb-NO/: xdg_desktop_portal_cosmic.ftl
i18n/nl/: xdg_desktop_portal_cosmic.ftl
i18n/nn/: xdg_desktop_portal_cosmic.ftl
i18n/pa/: xdg_desktop_portal_cosmic.ftl
i18n/pl/: xdg_desktop_portal_cosmic.ftl
i18n/pt/: xdg_desktop_portal_cosmic.ftl
i18n/pt-BR/: xdg_desktop_portal_cosmic.ftl
i18n/ro/: xdg_desktop_portal_cosmic.ftl
i18n/ru/: xdg_desktop_portal_cosmic.ftl
i18n/sr/: xdg_desktop_portal_cosmic.ftl
i18n/sr-Cyrl/: xdg_desktop_portal_cosmic.ftl
i18n/sr-Latn/: xdg_desktop_portal_cosmic.ftl
i18n/sv/: xdg_desktop_portal_cosmic.ftl
i18n/tr/: xdg_desktop_portal_cosmic.ftl
i18n/uk/: xdg_desktop_portal_cosmic.ftl
i18n/zh-CN/: xdg_desktop_portal_cosmic.ftl
i18n/zh-TW/: xdg_desktop_portal_cosmic.ftl
src/: access.rs  app.rs  app_chooser.rs  background.rs  buffer.rs  cgroup.rs  color_picker.rs  dmabuf_frame.rs  documents.rs  file_chooser.rs  input_capture.rs  localize.rs  main.rs  remote_desktop.rs  remote_desktop_dialog.rs  remote_desktop_ei.rs  screencast.rs  screencast_dialog.rs  screencast_thread.rs  screenshot.rs  subscription.rs  systemd.rs  wayland.rs
src/wayland/: cursor_stream.rs  gbm_devices.rs  mod.rs  toplevel.rs  workspaces.rs
src/widget/: annotation_canvas.rs  color_picker.rs  keyboard_wrapper.rs  mod.rs  output_arrangement.rs  output_selection.rs  rectangle_selection.rs  screenshot.rs
