[package]
name = "xdg-desktop-portal-cosmic"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[features]
default = []
wgpu = ["libcosmic/wgpu"]

[workspace]
members = ["cosmic-portal-config"]

[dependencies]
anyhow = "1.0.95"
ashpd = "0.11.0"
cosmic-files = { git = "https://github.com/pop-os/cosmic-files", default-features = false, features = [
    "gvfs",
    "wayland",
] }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", rev = "178eb0b" }
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols", rev = "178eb0b" }
futures = "0.3"
image = "0.25"
cosmic-bg-config = { git = "https://github.com/pop-os/cosmic-bg" }
cosmic-portal-config = { path = "./cosmic-portal-config" }
memmap2 = "0.9.5"
# pipewire = { git = "https://github.com/pop-os/pipewire-rs" }
once_cell = "1.20.3"
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs", features = [
    "v0_3_33",
] }
png = "0.17.16"
rustix = { version = "0.38.44", features = ["fs"] }
# spa_sys = { package = "libspa-sys", git = "https://github.com/pop-os/pipewire-rs" }
zbus = { version = "5.7.1", default-features = false, features = ["tokio"] }
gbm = "0.18.0"
wayland-protocols = "0.32.6"
env_logger = "0.11.6"
dirs = "6.0.0"
chrono = "0.4"
url = "2.5"
# i18n
i18n-embed = { version = "0.15.3", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.9.3"
rust-embed = "8.5.0"
# Workspace
cosmic-config.workspace = true
log.workspace = true
serde.workspace = true
freedesktop-desktop-entry = "0.7.8"
spa_sys = { package = "libspa-sys", git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs" }
pipewire-sys = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs" }
tempfile = "3.17.1"
tokio = { version = "1.43.0", features = ["macros", "net", "rt", "sync"] }
wayland-client = { version = "0.31.8" }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
# TODO: a11y feature crashes file chooser dialog
default-features = false
features = [
    "autosize",
    "dbus-config",
    "desktop",
    "multi-window",
    "tokio",
    "wayland",
    "wgpu",
    "winit",
]

[workspace.dependencies]
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
log = "0.4.25"
serde = "1.0.217"

[dev-dependencies]
gst = { package = "gstreamer", version = "0.23.5" }
clap = { version = "4.5.30", features = ["derive"] }

# [patch."https://github.com/pop-os/libcosmic"]
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }

# [patch."https://github.com/smithay/client-toolkit"]
# sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit//", rev = "3bed072" }

[profile.release]
opt-level = 3
lto = "thin"

[patch."https://github.com/pop-os/cosmic-protocols"]
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "main" }
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "main" }

[patch.crates-io]
xdg-mime = { git = "https://github.com/ellieplayswow/xdg-mime-rs", branch = "feature/get-same-as" }
