[package]
name = "xdg-desktop-portal-cosmic"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[features]
default = []
wgpu = ["libcosmic/wgpu"]

[workspace]
members = ["cosmic-portal-config"]

[dependencies]
anyhow = "1.0.100"
ashpd = "0.12"
cosmic-files = { git = "https://github.com/pop-os/cosmic-files", default-features = false, features = [
    "gvfs",
    "wayland",
] }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", rev = "d0e95be" }
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols", rev = "d0e95be" }
futures = "0.3"
image = "0.25"
cosmic-bg-config = { git = "https://github.com/pop-os/cosmic-bg" }
cosmic-portal-config = { path = "./cosmic-portal-config" }
memmap2 = "0.9.8"
# pipewire = { git = "https://github.com/pop-os/pipewire-rs" }
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs", features = [
    "v0_3_33",
] }
png = "0.18"
rustix = { version = "1.1", features = ["fs"] }
# spa_sys = { package = "libspa-sys", git = "https://github.com/pop-os/pipewire-rs" }
zbus = { version = "5.11.0", default-features = false, features = ["tokio"] }
gbm = "0.18.0"
wayland-protocols = "0.32.9"
env_logger = "0.11.8"
dirs = "6.0.0"
chrono = "0.4"
url = "2.5"
# i18n
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"
# Workspace
cosmic-config.workspace = true
log.workspace = true
serde.workspace = true
freedesktop-desktop-entry = "0.7.19"
spa_sys = { package = "libspa-sys", git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs" }
pipewire-sys = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs" }
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["macros", "net", "rt", "sync"] }
wayland-client = { version = "0.31.11" }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
# TODO: a11y feature crashes file chooser dialog
default-features = false
features = [
    "autosize",
    "dbus-config",
    "desktop",
    "multi-window",
    "tokio",
    "wayland",
    "wgpu",
    "winit",
]

[workspace.dependencies]
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
log = "0.4.28"
serde = "1.0.228"

[dev-dependencies]
gst = { package = "gstreamer", version = "0.24.2" }
clap = { version = "4.5.48", features = ["derive"] }

# [patch."https://github.com/pop-os/libcosmic"]
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"

[patch."https://github.com/pop-os/cosmic-protocols"]
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "cursor" }
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "cursor" }
